tests/baselines/reference/es6ExportAssignment2.errors.txt
a.ts(2,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.


==== a.ts (1 errors) ====
    var a = 10;
    export = a;  // Error: export = not allowed in ES6
    ~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
    
==== b.ts (0 errors) ====
    import * as a from "a";
    